Security filter, redirect, login and logout controller

--- a/example-webeasy/src/view/home.html
+++ b/example-webeasy/src/view/home.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        <link href="public/css/style.css" rel="stylesheet">
+    </head>
     <body>
         Home: {{text}}
     </body>
