--- a/webeasy/src/view/login.html
+++ b/webeasy/src/view/login.html
@@ -1,1 +1,29 @@
-login.html
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/public/css/login.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container">
+            <div>
+                <form action="/login/" method="POST">
+                    <div>
+                        <div>User:</div>
+                        <div><input type="text" name="user"></div>
+                    </div>
+                    <div>
+                        <div>Password:</div>
+                        <div><input type="password" name="password"></div>
+                    </div>
+                    <div>
+                        <button>
+                            <span></span>
+                            Login
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </body>
+</html>
