--- a/webeasy/src/public/css/style.css
+++ b/webeasy/src/public/css/style.css
@@ -1,4 +1,60 @@
-body{
+*{
+    font-family: 'Muli', sans-serif;
+    font-size: 13px;
+}
+*:focus {
+    outline: none;
+}
+h1{
+    font-size: 18px;
+}
+document,html,body{
     margin:0;
     padding:0;
+    width: 100%;
+    height: 100%;
+}
+.page{
+    width: 100%;
+    height: 100%;
+    background-color: #eee;
+    display: flex;
+}
+.container{
+    display: flex;
+    padding:2px;
+}
+.form-group{
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+.form-group .container-label, .form-group .container-input input{
+    color:#212121;
+}
+.form-group .container-input input:required{
+    border-left-color: #F44336; 
+    border-left-width: 3px;  
+}
+.form-group .container-label{
+    font-weight: 600;
+}
+.form-group .container-input input:active,.form-group .container-input input:focus{
+    border:solid 1px #42A5F5;
+}
+.form-group .container-input input{
+    padding: 5px;
+    border-radius:4px;
+    border:solid 1px #d4d4d4;
+    outline: none;
+}
+.form-group .btn{
+    border:solid 1px #d4d4d4;
+    border-radius: 2px;
+    background-color:#ddd;
+    padding:5px;
+    outline: none;
+}
+.link{
+    color:#2196F3;
+    text-decoration: none;
 }
