--- a/webeasy/src/public/css/login.css
+++ b/webeasy/src/public/css/login.css
@@ -80,3 +80,9 @@
     font-weight: 500;
     color:#2196F3;
 }
+.login-form .form-group .msg-error{
+    color: #F44336;
+    flex: 1;
+    padding: 5px;
+    text-align: center;
+}
