--- a/webeasy/src/public/css/style.css
+++ b/webeasy/src/public/css/style.css
@@ -53,6 +53,9 @@ document,html,body{
     background-color:#ddd;
     padding:5px;
     outline: none;
+    margin-left:5px;
+    margin-right:5px;
+    width: 75px;
 }
 .link{
     color:#2196F3;
