--- a/webeasy/src/view/login.html
+++ b/webeasy/src/view/login.html
@@ -5,55 +5,107 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,500,700" rel="stylesheet">
         <link href="/public/css/style.css" rel="stylesheet">
         <link href="/public/css/login.css" rel="stylesheet">
+        <link href="/public/lib/animate/animate.css" rel="stylesheet">
     </head>
     <body>
         <div class="page">
             <div class="container">
-                <div class="login">
-                    <div class="login-head">
-                        <h1 class="title">WebEasy</h1>
-                    </div>
-                    <div class="login-form">
-                        <form action="/login/" method="POST">
-                            <div class="form-group">
-                                <div class="container-label">User:</div>
-                                <div class="container-input"><input type="text" name="user" required></div>
+                <div class="flip-container">
+                    <div class="flipper">
+                        <div class="login front">
+                            <div class="login-head">
+                                <h1 class="title">WebEasy - Login</h1>
                             </div>
-                            <div class="form-group">
-                                <div class="container-label required">Password:</div>
-                                <div class="container-input"><input type="password" name="password" required></div>
+                            <div class="login-form">
+                                <form action="/login/" method="POST">
+                                    <div class="form-group">
+                                        <div class="container-label">User:</div>
+                                        <div class="container-input"><input type="text" name="user" required></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="container-label required">Password:</div>
+                                        <div class="container-input"><input type="password" name="password" required></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="container-label"></div>
+                                        <button class="btn btn-submit">
+                                            <span></span>
+                                            Login
+                                        </button>
+                                    </div>
+                                    {{#if flashMessage.error }}
+                                        <div class="form-group">
+                                            <div class="msg-error">{{flashMessage.error}}</div>
+                                        </div>
+                                    {{/if}}
+                                    <div class="form-group">
+                                        <div class="container-label"></div>
+                                        <div>
+                                            <a class="link" href="/login/recovery">Did you forget your user or password?</a>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
-                            <div class="form-group">
-                                <div class="container-label"></div>
-                                <button class="btn btn-submit">
-                                    <span></span>
-                                    Login
-                                </button>
-                            </div>
-                            {{#if flashMessage.error }}
+                            <div class="login-foot">
                                 <div class="form-group">
-                                    <div class="msg-error">{{flashMessage.error}}</div>
-                                </div>
-                            {{/if}}
-                            <div class="form-group">
-                                <div class="container-label"></div>
-                                <div>
-                                    <a class="link" href="/login/recovery">Did you forget your user or password?</a>
+                                    <div class="container-label signup-label">Want a new account?</div>
+                                    <button class="btn btn-signup">
+                                        <span></span>
+                                        Sign Up
+                                    </button>
                                 </div>
                             </div>
-                        </form>
-                    </div>
-                    <div class="login-foot">
-                        <div class="form-group">
-                            <div class="container-label signup-label">Want a new account?</div>
-                            <button class="btn btn-signup">
-                                <span></span>
-                                Sign Up
-                            </button>
+                        </div>
+                        <div class="login back">
+                            <div class="login-head">
+                                <h1 class="title">WebEasy - Signup</h1>
+                            </div>
+                            <div class="login-form">
+                                <form action="/login/" method="POST">
+                                    <div class="form-group">
+                                        <div class="container-label">Name:</div>
+                                        <div class="container-input"><input type="text" name="name" required></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="container-label">User:</div>
+                                        <div class="container-input"><input type="text" name="user" required></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="container-label required">Password:</div>
+                                        <div class="container-input"><input type="password" name="password" required></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="container-label required">Confirm Password:</div>
+                                        <div class="container-input"><input type="password" name="conf-password" required></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="container-label"></div>
+                                        <button class="btn btn-submit">
+                                            <span></span>
+                                            Login
+                                        </button>
+                                        <button type="button" class="btn btn-cancel">
+                                            <span></span>
+                                            Cancel
+                                        </button>
+                                    </div>
+                                    {{#if flashMessage.error }}
+                                        <div class="form-group">
+                                            <div class="msg-error">{{flashMessage.error}}</div>
+                                        </div>
+                                    {{/if}}
+                                </form>
+                            </div>
+                            <div class="login-foot">
+                                <div class="form-group">
+                                    
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script src="/public/js/app/login.js"></script>
     </body>
 </html>
