--- a/webeasy/src/view/login.html
+++ b/webeasy/src/view/login.html
@@ -14,10 +14,10 @@
                     <div class="flipper">
                         <div class="login front">
                             <div class="login-head">
-                                <h1 class="title">WebEasy - Login</h1>
+                                <h1 class="title">WebZ - Login</h1>
                             </div>
                             <div class="login-form">
-                                <form action="/login/" method="POST">
+                                <form action="/login/" method="POST" id="loginForm">
                                     <div class="form-group">
                                         <div class="container-label">User:</div>
                                         <div class="container-input"><input type="text" name="user" required></div>
@@ -58,10 +58,10 @@
                         </div>
                         <div class="login back">
                             <div class="login-head">
-                                <h1 class="title">WebEasy - Signup</h1>
+                                <h1 class="title">WebZ - Signup</h1>
                             </div>
                             <div class="login-form">
-                                <form action="/login/" method="POST">
+                                <form action="/login/signup" method="POST" id="signupForm">
                                     <div class="form-group">
                                         <div class="container-label">Name:</div>
                                         <div class="container-input"><input type="text" name="name" required></div>
@@ -76,13 +76,13 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="container-label required">Confirm Password:</div>
-                                        <div class="container-input"><input type="password" name="conf-password" required></div>
+                                        <div class="container-input"><input type="password" name="conf_password" required></div>
                                     </div>
                                     <div class="form-group">
                                         <div class="container-label"></div>
                                         <button class="btn btn-submit">
                                             <span></span>
-                                            Login
+                                            Register
                                         </button>
                                         <button type="button" class="btn btn-cancel">
                                             <span></span>
