--- a/webeasy/src/view/login.1.html
+++ b/webeasy/src/view/login.1.html
@@ -3,8 +3,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Muli:400,500,700" rel="stylesheet">
-        <link href="/public/css/style.css" rel="stylesheet">
-        <link href="/public/css/login.css" rel="stylesheet">
+        <link href="/home/claudio/Documents/private/webeasy/src/public/css/style.css" rel="stylesheet">
+        <link href="/home/claudio/Documents/private/webeasy/src/public/css/login.css" rel="stylesheet">
         <link href="http://localhost:3002/public/lib/animate/animate.css" rel="stylesheet">
     </head>
     <body>
@@ -112,7 +112,7 @@
             </div>
             {{/if}}
         </div>
-        <script src="/public/js/app/message.js"></script>
-        <script src="/public/js/app/login.js"></script>
+        <script src="/home/claudio/Documents/private/webeasy/src/public/js/app/message.js"></script>
+        <script src="/home/claudio/Documents/private/webeasy/src/public/js/app/login.js"></script>
     </body>
 </html>
