Security role filter and 403 page

--- a/webeasy/src/view/error/403.page.html
+++ b/webeasy/src/view/error/403.page.html
@@ -1,5 +1,32 @@
 <html>
-    <body>
-        403 Forbidden - {{message}}
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,500,700" rel="stylesheet">
+    <link href="/public/css/style.css" rel="stylesheet">
+    <link href="/public/css/error.css" rel="stylesheet">
+    <link href="/public/lib/animate/animate.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="page">
+        <div class="container">
+            <div class="error-container background-not-allowed">
+                <div class="error-code">
+                    <label class="code">
+                        403
+                    </label> 
+                    <div class="error-title">
+                        Access Forbidden
+                    </div>
+                </div>
+                <div class="error-message">
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+</body>
+
 </html>
