--- a/webeasy/src/view/error/404.page.html
+++ b/webeasy/src/view/error/404.page.html
@@ -1,10 +1,39 @@
 <html>
-    <body>
-        Page not found - {{message}}
-        <br>
-        Stack: <br>
-        <code>
-            {{stack}}
-        </code>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,500,700" rel="stylesheet">
+    <link href="/home/claudio/Documents/projects/webeasy/webeasy/src/public/css/style.css" rel="stylesheet">
+    <link href="/home/claudio/Documents/projects/webeasy/webeasy/src/public/css/error.css" rel="stylesheet">
+    <link href="/home/claudio/Documents/projects/webeasy/webeasy/src/public/lib/animate/animate.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="page">
+        <div class="container">
+            <div class="error-container">
+                <div class="error-code">
+                    <label class="code">
+                        404
+                    </label> 
+                    <div class="error-title">
+                        Page not Found
+                    </div>
+                </div>
+                <div class="error-message">
+                    {{message}}
+                    <br>
+                    Stack: 
+                    <br>
+                    <code>
+                        {{stack}}
+                    </code>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+</body>
+
 </html>
