--- a/webeasy/src/view/login.html
+++ b/webeasy/src/view/login.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,500,700" rel="stylesheet">
         <link href="/public/css/style.css" rel="stylesheet">
         <link href="/public/css/login.css" rel="stylesheet">
-        <link href="http://localhost:3002/public/lib/animate/animate.css" rel="stylesheet">
+        <link href="/public/lib/animate/animate.css" rel="stylesheet">
     </head>
     <body>
         <div class="page">
