--- a/example-webeasy/src/view/home.html
+++ b/example-webeasy/src/view/home.html
@@ -4,5 +4,10 @@
     </head>
     <body>
         Home: {{text}}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js"></script>
+        <script>
+            var socket = io();
+            socket.send("Hi, I'm a client");
+        </script>
     </body>
 </html>
