--- a/example-webeasy/src/view/home.html
+++ b/example-webeasy/src/view/home.html
@@ -13,7 +13,7 @@
             //var socket = io();
             var nsp = io('/chat',{
                 query: {
-                    token: 'token abc123'
+                    authorization: 'basic '+window.btoa('abc:123')
                 }
             });
             nsp.on('error',(error)=>{
